--- a/carplay.service
+++ b/carplay.service
@@ -3,7 +3,8 @@ Description=REACT Carplay
 After=lightdm.service
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/react-carplay-4.0.5-arm64.AppImage
+User=pi
+ExecStart=/usr/local/bin/MFD-CarPlay/react-carplay-4.0.5-arm64.AppImage
 Environment=XAUTHORITY=/home/dogs/.Xauthority
 Environment=DISPLAY=:0
 
